# progressive-android-concept

./: .gitignore  CMakeLists.txt  expand_stubs.py  fix_mismatches.py  gradle.properties  gradlew  settings.gradle
libolm/: CMakeLists.txt  olm_stub.cpp
libolm/include/olm/: inbound_group_session.h  olm.h
matrix-sdk/: CMakeLists.txt
progressive/: CMakeLists.txt  progressive_stubs.cpp
progressive/include/progressive/: account_data_utils.hpp  account_deactivation_utils.hpp  account_export.hpp  account_validator.hpp  admin_utils.hpp  alarm_engine.hpp  alias_manager.hpp  attachment_handler.hpp  audio_engine.hpp  auth_models.hpp  avatar_color_gen.hpp  avatar_cropper.hpp  avatar_fallback_utils.hpp  avatar_picker.hpp  avatar_url_utils.hpp  avatar_utils.hpp  background_scheduler.hpp  backup_keys_utils.hpp  backup_restore_utils.hpp  backup_version_utils.hpp  bidirectional_utils.hpp  biometric_auth.hpp  cache_invalidator.hpp  call_duration.hpp  call_event_formatter.hpp  call_models.hpp  canonical_alias_util.hpp  canonical_json.hpp  capabilities_utils.hpp  common_utils.hpp  config_loader.hpp  contact_utils.hpp  content_builder.hpp  content_builder_utils.hpp  content_report_utils.hpp  content_warning_utils.hpp  crash_reporter.hpp  create_room.hpp  cross_sign_bootstrap.hpp  cross_sign_utils.hpp  (+341 more)
progressive/src/: account_data_utils.cpp  account_deactivation_utils.cpp  account_export.cpp  account_utils.cpp  account_validator.cpp  admin_utils.cpp  alarm_engine.cpp  alias_manager.cpp  attachment_handler.cpp  audio_engine.cpp  auth_models.cpp  auth_utils.cpp  avatar_color_gen.cpp  avatar_cropper.cpp  avatar_fallback_utils.cpp  avatar_picker.cpp  avatar_url_utils.cpp  avatar_utils.cpp  background_scheduler.cpp  backup_keys_utils.cpp  backup_restore_utils.cpp  backup_utils.cpp  backup_version_utils.cpp  bidirectional_utils.cpp  biometric_auth.cpp  cache_invalidator.cpp  cache_manager.cpp  call_duration.cpp  call_event_formatter.cpp  call_manager.cpp  call_models.cpp  canonical_alias_util.cpp  canonical_json.cpp  capabilities_utils.cpp  chat_features.cpp  chunked_upload.cpp  client_info.cpp  color_utils.cpp  common_utils.cpp  config_loader.cpp  (+493 more)
src/: CMakeLists.txt  main.cpp
src/app/: app_update_checker.cpp  app_update_checker.hpp  application.cpp  application.hpp  crash_reporter.cpp  crash_reporter.hpp  log_collector.cpp  log_collector.hpp  log_viewer_dialog.cpp  log_viewer_dialog.hpp  main_window.cpp  main_window.hpp  notification_manager.cpp  notification_manager.hpp  system_tray_manager.cpp  system_tray_manager.hpp
src/features/auth/: irc_auth_dialog.cpp  irc_auth_dialog.hpp  lemmy_auth_dialog.cpp  lemmy_auth_dialog.hpp  matrix_auth_dialog.cpp  matrix_auth_dialog.hpp  matrix_login_widget.cpp  matrix_login_widget.hpp
src/features/home/: chat_detail_widget.cpp  chat_detail_widget.hpp  chat_list_bottom_sheet.cpp  chat_list_bottom_sheet.hpp  chat_list_widget.cpp  chat_list_widget.hpp  forward_message_dialog.cpp  forward_message_dialog.hpp  media_gallery_widget.cpp  media_gallery_widget.hpp  message_context_menu.cpp  message_context_menu.hpp  message_edit_history_dialog.cpp  message_edit_history_dialog.hpp  pinned_messages_widget.cpp  pinned_messages_widget.hpp  poll_widget.cpp  poll_widget.hpp  search_messages_widget.cpp  search_messages_widget.hpp  status_message_editor.cpp  status_message_editor.hpp  thread_view_widget.cpp  thread_view_widget.hpp  welcome_widget.cpp  welcome_widget.hpp
src/features/irc/: irc_channel_list_dialog.cpp  irc_channel_list_dialog.hpp  irc_connection_dialog.cpp  irc_connection_dialog.hpp  irc_motd_dialog.cpp  irc_motd_dialog.hpp  irc_user_list_dialog.cpp  irc_user_list_dialog.hpp
src/features/lemmy/: lemmy_home_widget.cpp  lemmy_home_widget.hpp  lemmy_notifications_widget.cpp  lemmy_notifications_widget.hpp  lemmy_post_detail_widget.cpp  lemmy_post_detail_widget.hpp  lemmy_search_widget.cpp  lemmy_search_widget.hpp
src/features/matrix_chat/: account_switcher.cpp  account_switcher.hpp  command_palette.cpp  command_palette.hpp  create_room_dialog.cpp  create_room_dialog.hpp  device_verification_widget.cpp  device_verification_widget.hpp  direct_chat_dialog.cpp  direct_chat_dialog.hpp  encryption_key_dialog.cpp  encryption_key_dialog.hpp  invite_dialog.cpp  invite_dialog.hpp  power_level_editor.cpp  power_level_editor.hpp  (+18 more)
src/irc/: irc_message.hpp  irc_room.hpp  irc_session.cpp  irc_session.hpp  irc_session_holder.cpp  irc_session_holder.hpp
src/lemmy/: lemmy_client.cpp  lemmy_client.hpp  lemmy_message.hpp  lemmy_room.hpp  lemmy_session.cpp  lemmy_session.hpp  lemmy_session_holder.cpp  lemmy_session_holder.hpp
src/matrix/: matrix_message.hpp  matrix_push_rules.cpp  matrix_push_rules.hpp  matrix_room.hpp  matrix_session.cpp  matrix_session.hpp  matrix_sync_manager.cpp  matrix_sync_manager.hpp
src/native/: progressive_native.cpp  progressive_native.hpp
src/protocol/: protocol_manager.cpp  protocol_manager.hpp  protocol_message.hpp  protocol_room.hpp  protocol_session.cpp  protocol_session.hpp  protocol_type.hpp
src/util/: clipboard_util.hpp  color_util.hpp  date_util.hpp  file_util.hpp  json_util.cpp  json_util.hpp  network_util.hpp  string_util.cpp  string_util.hpp
tests/: CMakeLists.txt  test_almost_done.cpp  test_attachment_viewer.cpp  test_autocomplete.cpp  test_barcode_scanner.cpp  test_batch_alpha.cpp  test_batch_antares.cpp  test_batch_arcturus.cpp  test_batch_beta.cpp  test_batch_capella.cpp  test_batch_chi.cpp  test_batch_delta.cpp  test_batch_epsilon.cpp  test_batch_eta.cpp  test_batch_extra1.cpp  test_batch_extra2.cpp  test_batch_extra3.cpp  test_batch_gamma.cpp  test_batch_iota.cpp  test_batch_kappa.cpp  test_batch_lambda.cpp  test_batch_mu.cpp  test_batch_nu.cpp  test_batch_omega.cpp  test_batch_omicron.cpp  test_batch_orion.cpp  test_batch_phi.cpp  test_batch_pi.cpp  test_batch_psi.cpp  test_batch_rho.cpp  test_batch_rigel.cpp  test_batch_sigma.cpp  test_batch_sirius.cpp  test_batch_small1.cpp  test_batch_small2.cpp  test_batch_small3.cpp  test_batch_small4.cpp  test_batch_small5.cpp  test_batch_tau.cpp  test_batch_theta.cpp  (+254 more)
(+155 files in other folders)
